coreected strike not working

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
           </button>
         </div>
         <!-- <ul id="todo-list" class="list-group mt-4"></ul> -->
-        <ul id="todo-list" class="list-group border">
+        <ul id="todo-list" class="list-group ">
           <li class="list-group-item p-3">
             <input class="form-check-input me-1" id="todo-1" type="checkbox" />
             <label class="form-check-label" for="todo-1">
-              <strike>Complete QTripDynamic</strike>
+
+              <!-- <strike>Complete QTripDynamic</strike> -->
             </label>
           </li>
           <li class="list-group-item p-3">
